--- a/PHTML/contact-es.phtml
+++ b/PHTML/contact-es.phtml
@@ -10,7 +10,7 @@
 		  <span>construyo</span>
 		</div>
 		<h2 class="sentence">para usted hoy?</h2>
-		<form>
+		<form method="POST" action="PHP/sendemail.php?lang=es">
 			<ul class="form-group">
 		        <li>
 		        	<span class="icon-case"><i class="fa fa-male"></i></span>
@@ -19,7 +19,7 @@
 			    <br/><br/>
 			    <li>
 			    	<span class="icon-case"><i class="fas fa-envelope"></i></span>
-		    		<input type="text" name="mail" id="mail" data-rule="required" placeholder="E-mail." data-msg="Vérifiez votre saisie sur les champs : Le champ 'Nom' doit être renseigné."/>
+		    		<input type="text" name="email" id="email" data-rule="required" placeholder="E-mail." data-msg="Vérifiez votre saisie sur les champs : Le champ 'Nom' doit être renseigné."/>
 			    </li>
 			   	<br/><br/>
 		       	<li>
@@ -50,18 +50,8 @@
 			<h1><?= $downloadcv ;?></h1>
 		</div>
 		<div id="downloads-2">
-			<h1><?= $selectalanguage ;?></h1>
-			<br/>
-			<select>
-				<option disabled="disabled" selected="selected" value="0">-</option>
-				<?php foreach($languages as $language): ?>
-					<option value="<?= $language['parametre_url'] ?>"><?php $explode = explode(' ', $language['Nom'], 5);
-						echo $explode[$number] ;?></option>
-				<?php endforeach; ?>
-			</select>
-		</div>
-		<div id="downloads-3">
-			<h1>2. Télécharger</h1>
+			<h1>Descargar</h1>
+			<a href="CV-s/CV-ES.pdf" download><img src="CV-s/pic-cvfr.png"></a>
 		</div>
 	</div>
 </div>
