--- a/PHTML/index.phtml
+++ b/PHTML/index.phtml
@@ -393,7 +393,7 @@
 			<h4><?= $networks ;?></h4>
 			<div class="circle">
 				<?php foreach($social as $socials): ?>
-					<a href="<?= $socials['URL'] ?>" target="_blank" title="<?= $socials['Nom'] ?>";?><?= $socials['Image']?></a>
+					<a href="<?= $socials['url'] ?>" target="_blank" title="<?= $socials['nom'] ?>";?><?= $socials['image']?></a>
 				<?php endforeach; ?>
 				<i class="fab fa-snapchat-ghost"></i>
 			</div>
@@ -408,11 +408,11 @@
 			<li><i class="fas fa-envelope-open"></i> maxime.j.pro@free.fr</li>
 			<li><i class="fas fa-phone-volume"></i> +33 7 83 89 96 37</li>
 			<li><i class="fas fa-location-arrow"></i>Lattes, France</li>
-			<li>Mis en ligne par FREE</li>
-			<li>Siège Social de Free</li> 
-			<li>8 Rue de la Ville-l’Évêque</li>
-			<li>75008, Paris</li>
-			<li>01 73 50 20 00</li>
+			<li>Mis en ligne par Heroku</li>
+			<li></li> 
+			<li></li>
+			<li></li>
+			<li></li>
 		</ul>
 	</footer>
 	<!-- phpmyvisites -->
